--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-  background: #B0B0B0;
-  padding: 10%;
+  /* background: #B0B0B0; */
+  background: url('https://cdn.pixabay.com/photo/2016/06/02/02/33/triangles-1430105_1280.png');
+  /* background-size: 100vw 100vh; */
+  background-size: cover; /* Maintain aspect ratio and cover entire container */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -14,9 +21,12 @@ body {
 }
 
 main {
+  margin: 0 auto;
   background: whitesmoke;
-  padding: 20px;
-  width: 400px;
-  height: 400px;
+  padding: 10px;
+  width: 300px;
+  height: 450px;
   overflow-y: auto;
+  border: 10px solid whitesmoke;
+  border-radius: 20px;
 }
