--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@ body {
 
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  color: rgb(94, 93, 93);
   font-style: normal;
 }
 
@@ -24,9 +25,16 @@ main {
   margin: 0 auto;
   background: whitesmoke;
   padding: 10px;
-  width: 300px;
-  height: 450px;
+  width: 450px;
+  height: 500px;
   overflow-y: auto;
   border: 10px solid whitesmoke;
   border-radius: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  main {
+    width: 280px;
+    height: 450px;
+  }
 }
