--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   font-family: "Roboto", sans-serif;
@@ -26,7 +26,7 @@ main {
   background: whitesmoke;
   padding: 10px;
   width: 450px;
-  height: 500px;
+  /* height: 500px; */
   overflow-y: auto;
   border: 10px solid whitesmoke;
   border-radius: 20px;
